# user/static/swagger.yml
@@ -6,7 +6,7 @@ info:
 servers:
 - url: /
 paths:
-  /users/create_user:
+  /users:
     put:
       tags:
       - Users
@@ -28,7 +28,6 @@ paths:
           description: User already exists
         403:
           description: Forbidden, cannot create admin or health authority
-  /users/edituser:
     post:
       tags:
       - Users
@@ -56,7 +55,6 @@ paths:
           description: User information changed
         401:
           description: User current password is wrong or user doesn't exist
-  /users/getusers:
     get:
       tags:
       - Users
@@ -78,6 +76,50 @@ paths:
                     $ref: '#/components/schemas/User/properties/firstname'
                   lastname:
                     $ref: '#/components/schemas/User/properties/lastname'     
+  /login:
+    post:
+        tags:
+        - Users
+        summary: Get information about user if credential are correct
+        operationId: views.user.login
+
+        requestBody:
+          description: Get email and password
+          required: true
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  email:
+                    $ref: '#/components/schemas/User/properties/email'
+                  password:
+                    $ref: '#/components/schemas/User/properties/password'
+
+        responses:
+          200:
+            description: Return email, phone, firstname, lastname, dateofbirth, role
+            content:
+              application/json:
+                schema:
+                  type: array
+                  properties:
+                    email:
+                      $ref: '#/components/schemas/User/properties/email'
+                    phone:
+                      $ref: '#/components/schemas/User/properties/phone'
+                    firstname:
+                      $ref: '#/components/schemas/User/properties/firstname'
+                    lastname:
+                      $ref: '#/components/schemas/User/properties/lastname'    
+                    dateofbirth:
+                      $ref: '#/components/schemas/User/properties/dateofbirth'  
+                    role:
+                        $ref: '#/components/schemas/User/properties/role'  
+          404:
+            description: user not found
+          401:
+            description: user password is wrong
     
 
 components:
@@ -119,7 +161,7 @@ components:
           description: User's last name
           example: "AwesomeLastName"
         password:
-          minLength: 1
+          minLength: 8
           type: string
           description: User's password
           example: "My@w3s0mePassword"
@@ -129,6 +171,18 @@ components:
           example: "10/10/2020"
         role:
           type: string
-          enum: ['customer', 'restaurant owner']
+          enum: ['customer', 'owner']
           description: User's role
           example: "customer"
+        is_active:
+          type: boolean
+          description: User is an active account or is going to be deleted
+          example: true
+        is_admin:
+          type: boolean
+          description: User is admin or not
+          example: false
+        is_anonymous:
+          type: boolean
+          description: User is not logged in
+          example: false
